Adjust intro panels

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <h1>Oliver Gregg: Prop maker</h1>
   </header>
   <main>
-    <h2>About Oliver</h2>
+<!--
+    <p>I'm Oliver Gregg, a prop maker and special effects artist studying at the National Institute of Dramatic Arts in Sydney. This website allows me to share my creations and the skills and techniques I've learned while making my props.</p>
+-->
 
-    <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <p class="item-text">I'm Oliver Gregg, a prop maker and special effects artist studying at the National Institute of Dramatic Arts in Sydney. This website allows me to share my creations and the skills and techniques I've learned while making my props.</p>
-    </div>
+    <p>I'm Oliver Gregg, a prop maker and special effects artist studying at the National Institute of Dramatic Arts in Sydney. Check out my recent creations and read about some of the skills and techniques I've learned.</p>
 
     <h2>Recent projects</h2>
 
