--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <div class="item">
       <ul>
-        <li>Project: Nida Intro to Scenic Construction</li>
-        <li>Size: 2 metres tall. </li>
-        <li>Materials: MDF, plaster, acrylic paint, sawdust, shellac, methylated spirits.</li>
+        <li><b>Project</b>: Nida Intro to Scenic Construction</li>
+        <li><b>Size</b>: 2 metres tall. </li>
+        <li><b>Materials</b>: MDF, plaster, acrylic paint, sawdust, shellac, methylated spirits.</li>
       </ul>
     </div>
 
@@ -62,15 +62,15 @@
     </figure>
 
     <figure>
+      <img src="assets/img/zombie08.jpg" alt="Panels being installed">
+    </figure>
+
+    <figure>
       <img src="assets/img/zombie06.jpg" alt="Installed panels - front view">
     </figure>
 
     <figure>
       <img src="assets/img/zombie07.jpg" alt="Installed panels - side view">
-    </figure>
-
-    <figure>
-      <img src="assets/img/zombie08.jpg" alt="">
     </figure>
 
   </main>
