--- a/project2.html
+++ b/project2.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,8 +24,8 @@
 
     <div class="item">
       <ul>
-        <li>Project: Nida Introduction to Metal Working</li>
-        <li>Materials: Aluminium, timber, rope</li>
+        <li><b>Project</b>: Nida Introduction to Metal Working</li>
+        <li><b>Materials</b>: Aluminium, timber, rope</li>
       </ul>
     </div>
 
