--- a/project3.html
+++ b/project3.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <div class="item">
       <ul>
-        <li>Project: NIDA Cultural Artefact Project</li>
-        <li>Size: Spear length - 275cm, Woomera length - 60cm</li>
-        <li>Materials: Gymea lily, cypress pine, vine, bark</li>
+        <li><b>Project</b>: NIDA Cultural Artefact Project</li>
+        <li><b>Size</b>: Spear length - 275cm, Woomera length - 60cm</li>
+        <li><b>Materials</b>: Gymea lily, cypress pine, vine, bark</li>
       </ul>
     </div>
 
