--- a/project4.html
+++ b/project4.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <div class="item">
       <ul>
-        <li>Project: Nida Fantasy Weapons</li>
-        <li>Size: Macuahuitl stands roughly 5 and a half feet tall.</li>
-        <li>Materials: Foamcore, plaster, timber, transparent acrylic sheet, flexicast, acrylic paint</li>
+        <li><b>Project</b>: Nida Fantasy Weapons</li>
+        <li><b>Size</b>: Macuahuitl stands roughly 5 and a half feet tall.</li>
+        <li><b>Materials</b>: Foamcore, plaster, timber, transparent acrylic sheet, flexicast, acrylic paint</li>
       </ul>
     </div>
 
