--- a/project5.html
+++ b/project5.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,10 +24,10 @@
 
     <div class="item">
       <ul>
-        <li>Project: NIDA Self-Portrait Project</li>
-        <li>Details: Inspired by the style of Deb Weir</li>
-        <li>Size: 150cm x 130 cm</li>
-        <li>Materials: Acrylic and markers on canvas</li>
+        <li><b>Project</b>: NIDA Self-Portrait Project</li>
+        <li><b>Details</b>: Inspired by the style of Deb Weir</li>
+        <li><b>Size</b>: 150cm x 130 cm</li>
+        <li><b>Materials</b>: Acrylic and markers on canvas</li>
       </ul>
     </div>
 
