--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <div class="item">
       <ul>
-        <li>Project: Toilet stall - Coronation of Poppea</li>
-        <li>Designed by: Rebecca Howarth</li>
-        <li>Materials: MDF, sourced toilet, shellac, watered-down brown and green acrylic paint, posca markers, sourced stickers</li>
+        <li><b>Project</b>: Toilet stall - Coronation of Poppea</li>
+        <li><b>Designed by</b>: Rebecca Howarth</li>
+        <li><b>Materials</b>: MDF, sourced toilet, shellac, watered-down brown and green acrylic paint, posca markers, sourced stickers</li>
       </ul>
     </div>
 
