--- a/project8.html
+++ b/project8.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <div class="item">
       <ul>
-        <li>Project: NIDA Furniture Replica Project</li>
-        <li>Design by: @deadly_chairs</li>
-        <li>Materials: Welded 25 x 25 x 1.6mm mild steel, upholstered in red velvet fabric.</li>
+        <li><b>Project</b>: NIDA Furniture Replica Project</li>
+        <li><b>Design by</b>: @deadly_chairs</li>
+        <li><b>Materials</b>: Welded 25 x 25 x 1.6mm mild steel, upholstered in red velvet fabric.</li>
       </ul>
     </div>
 
