--- a/project6.html
+++ b/project6.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -24,8 +24,8 @@
 
     <div class="item">
       <ul>
-        <li>Project: NIDA Sculptural Creatures Project</li>
-        <li>Materials: PLA filament, silicone paint, water-clear resin, plywood</li>
+        <li><b>Project</b>: NIDA Sculptural Creatures Project</li>
+        <li><b>Materials</b>: PLA filament, silicone paint, water-clear resin, plywood</li>
       </ul>
     </div>
 
