--- a/project2.html
+++ b/project2.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;600;700&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -58,12 +58,19 @@
 
   </main>
   <footer>
-    <h4>Contact details</h4>
-    <p>
-      Mobile: 0434 619 346<br>
-      Email: oligregg at icloud dot com
-    </p>
+    <h2>Let's chat!</h2>
+    <p>Would you like to discuss how I could help you with your next project? Use the form below:</p>
+    <form action="https://formspree.io/f/mvojnzlw" method="POST">
+      <div class="form-group">
+        <label class="label" for="email">Your email</label>
+        <input class="input" id="email" type="email" name="email">
+      </div>
+      <div class="form-group">
+        <label class="label" for="message">Your message</label>
+        <textarea class="input" id="message" name="message" rows="5"></textarea>
+      </div>
+      <button class="button" type="submit">Send</button>
+    </form>
   </footer>
-
 </body>
 </html>
