--- a/project5.html
+++ b/project5.html
@@ -31,7 +31,13 @@
       </ul>
     </div>
 
-    <p>Add something</p>
+    <p>I started by creating a rough self portrait in the artstyle on photoshop, experimenting with different patterns and colours.</p>
+
+    <p>I then traced my portrait onto my canvas splashing several layers of colours for the skin and hair. </p>
+
+    <p>Then, with a tomato sauce bottle I traced the outlines with thick black and white paint</p>
+
+    <p>Finally, I used a black marker to draw the lines along the edges and write the nonsensical words at the bottom of the self portrait.</p>
 
     <figure>
       <img src="assets/img/self-portraite01.jpg" alt="Self-portrait">
